[package]
name = "mongo-keepalive"
version = "1.0.0"
edition = "2021"
description = "Keep MongoDB Atlas free-tier clusters alive by sending periodic ping commands"
license = "MIT"
repository = "https://github.com/YadavSourabhGH/mongo-keepalive"
keywords = ["mongodb", "atlas", "keepalive", "ping"]
categories = ["database"]

[dependencies]
mongodb = "2"
tokio = { version = "1", features = ["rt", "time", "macros"] }
log = "0.4"
env_logger = "0.11"
